%% Status: FROZEN
%% Last aligned with code: 2026-02-08
stateDiagram-v2
  [*] --> DRAFT: create_booking_draft (explicit)

  DRAFT --> PENDING: submit_request (human)

  PENDING --> CONFIRMED: accept (human)
  PENDING --> DECLINED: reject (human)
  PENDING --> DECLINED: expire_check_on_read (system)

  CONFIRMED --> MODIFIED: modify (human)
  MODIFIED --> MODIFIED: modify_again (human)

  CONFIRMED --> CANCELLED: cancel (human)
  MODIFIED --> CANCELLED: cancel (human)

  DECLINED --> [*]
  CANCELLED --> [*]

  note right of DRAFT
    Internal only
    Not visible to customer
    Draft and proposals live here
  end note

  note right of PENDING
    Explicit booking request
    Awaiting human decision
    24h validity checked on access
  end note

  note right of CONFIRMED
    Slot logically locked
    Cancellation policy attached
  end note

  note right of MODIFIED
    Human-edited booking
    Customer notified
    Policy unchanged
  end note

  note right of CANCELLED
    Terminal
    who_cancelled recorded
  end note
